[build] Fix build configuration